<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@color/colorDialogFragmentClass"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/classname"
        android:inputType="textPersonName"
        android:hint="@string/classname"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:id="@+id/institution"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:hint="@string/institution"
        android:textColor="@color/white"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:id="@+id/password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"

        />

    <EditText
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:hint="@string/cutoff"
        android:id="@+id/cutoff"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/sizegroups"
        android:layout_marginTop="1dp"
        android:hint="@string/sizegroups"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/addition"
        android:layout_marginTop="1dp"
        android:hint="@string/addition"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="1">

        <Button
            android:id="@+id/cancel_create_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Cancel"
            android:textColor="@color/white"
            android:background="#30000000"

            />


        <Button
            android:id="@+id/ok_create_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="Criar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="#30000000"

            />


        ></LinearLayout>

</LinearLayout>