<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/salas_item"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/salas"
        app:showAsAction="never" />
    <item
        android:id="@+id/usuario_item"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="Explorar"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_item"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/perfil"
        app:showAsAction="never" />
    <item
        android:id="@+id/avaliacao_item"
        android:enabled="true"
        android:icon="@drawable/ic_about"
        android:title="@string/sobre"
        app:showAsAction="never" />
</menu>