<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbd19"
    tools:context="fga.mds.gpp.trezentos.View.Activity.MainActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="#262626"
        app:titleTextColor="#FFF"
        app:subtitleTextColor="#FFF">


    </android.support.v7.widget.Toolbar>




    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_above="@+id/bottom_nav"
        android:animateLayoutChanges="true"/>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        android:layout_alignParentBottom="true"
        app:itemBackground = "@color/colorBottomMenu"
        app:itemIconTint = "@drawable/selector"
        app:itemTextColor = "@drawable/selector"
        app:menu="@menu/menu_navigation"/>

</RelativeLayout>
