...
            android:clickable="true"
            android:visibility="gone"
        />
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/class_image_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="bottom|end"

        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
...
